--- a/Project_Soccer.qmd
+++ b/Project_Soccer.qmd
@@ -24,246 +24,201 @@ library(tidyr)
 library(readr)
 ```
 
-```{r}
-# Function to extract season data from Transfermarkt
-extract_season_data <- function(season_year) {
-  # Construct URL for the given season (format: 1992 for 1992/93 season)
-  base_url <- paste0("https://www.transfermarkt.co.uk/premier-league/tabelle/wettbewerb/GB1?saison_id=", season_year)
-  
-  # Add delay to be respectful to the website
-  Sys.sleep(2)
-  
-  # Read and parse the webpage
-  page <- tryCatch({
-    read_html(base_url)
-  }, error = function(e) {
-    message("Error reading URL: ", base_url, " - ", e$message)
-    return(NULL)
-  })
-  
-  if(is.null(page)) return(NULL)
-  
-  # Extract table data
-  table_data <- tryCatch({
-    tables <- page %>% html_nodes("table.items") %>% html_table()
-    if(length(tables) > 0) tables[[1]] else NULL
-  }, error = function(e) {
-    message("Error extracting table: ", e$message)
-    return(NULL)
-  })
-  
-  if(is.null(table_data)) return(NULL)
-  
-  # Print column names to debug
-  print(paste("Original columns:", paste(names(table_data), collapse=", ")))
-  
-  # Clean column names and data - adjust the column names based on the actual structure
-  if(ncol(table_data) >= 10) {
-    names(table_data)[1:10] <- c("position", "club", "matches", "wins", "draws", "losses", 
-                                 "goals_for", "goals_against", "goal_difference", "points")
-    
-    # Clean the club names (remove rank numbers if they exist)
-    table_data$club <- gsub("^\\d+\\s", "", table_data$club)
-    
-    # Remove unnecessary rows and columns
-    table_data <- table_data %>%
-      filter(!is.na(position) & position != "") %>%
-      select(position, club, points)
-  } else {
-    message("Table structure is unexpected. Number of columns: ", ncol(table_data))
-    print(head(table_data))
-    return(NULL)
-  }
-  
-  # Extract transfer expenditure from separate page
-  transfer_url <- paste0("https://www.transfermarkt.co.uk/premier-league/transfers/wettbewerb/GB1/plus/?saison_id=", season_year)
-  
-  transfer_page <- tryCatch({
-    read_html(transfer_url)
-  }, error = function(e) {
-    message("Error reading transfer URL: ", transfer_url, " - ", e$message)
-    return(NULL)
-  })
-  
-  if(is.null(transfer_page)) {
-    # If we can't get transfer data, return just the table data with zero expenditure
-    return(table_data %>% 
-             mutate(
-               expenditure_m = 0,
-               season = paste0(season_year, "/", substr(season_year + 1, 3, 4))
-             )
-    )
-  }
-  
-  # Extract club expenditure data
-  transfer_data <- tryCatch({
-    transfer_page %>%
-      html_nodes(".large-8 .box") %>%
-      html_nodes("table") %>%
-      html_table()
-  }, error = function(e) {
-    message("Error extracting transfer tables: ", e$message)
-    return(list())
-  })
-  
-  # Process transfer data to extract expenditure
-  expenditure_data <- data.frame(
-    club = character(),
-    expenditure_m = numeric(),
-    stringsAsFactors = FALSE
-  )
-  
-  for(i in seq_along(transfer_data)) {
-    if(i %% 2 == 1) { # Club transfer tables are at odd indices
-      club_name <- tryCatch({
-        club_nodes <- transfer_page %>% html_nodes(".large-8 .box h2")
-        if(length(club_nodes) >= ceiling(i/2)) {
-          club_nodes[ceiling(i/2)] %>% html_text() %>% trimws()
-        } else {
-          paste("Unknown Club", i)
-        }
-      }, error = function(e) {
-        message("Error extracting club name: ", e$message)
-        return(paste("Unknown Club", i))
-      })
-      
-      if(length(transfer_data[[i]]) > 0) {
-        # Get expenditure from last row, last column
-        exp_col <- ncol(transfer_data[[i]])
-        exp_row <- nrow(transfer_data[[i]])
-        
-        # Check if there are actually rows and columns
-        if(exp_row > 0 && exp_col > 0) {
-          exp_text <- as.character(transfer_data[[i]][exp_row, exp_col])
-          
-          # Parse the expenditure value (e.g., "€10.50m" to 10.5)
-          exp_value <- gsub("[^0-9.]", "", exp_text)
-          if(exp_value != "") {
-            exp_value <- as.numeric(exp_value)
-            if(grepl("m", exp_text)) {
-              exp_value <- exp_value # Already in millions
-            } else if(grepl("k", exp_text)) {
-              exp_value <- exp_value / 1000 # Convert thousands to millions
-            }
-          } else {
-            exp_value <- 0
-          }
-          
-          # Add to expenditure data
-          expenditure_data <- rbind(expenditure_data, 
-                                   data.frame(club = club_name, 
-                                             expenditure_m = exp_value,
-                                             stringsAsFactors = FALSE))
-        }
-      }
-    }
-  }
-  
-  # Print debug info about the clubs found
-  if(nrow(expenditure_data) > 0) {
-    print(paste("Extracted expenditure data for", nrow(expenditure_data), "clubs"))
-    print(paste("Clubs found:", paste(expenditure_data$club, collapse=", ")))
-  } else {
-    print("No expenditure data extracted")
-  }
-  
-  # Standardize club names between the two datasets
-  # This could be improved with a more robust name matching approach
-  if(nrow(expenditure_data) > 0) {
-    # Print both club name lists to see differences
-    print("League table clubs:")
-    print(table_data$club)
-    print("Transfer page clubs:")
-    print(expenditure_data$club)
-    
-    # Clean club names to improve matching
-    expenditure_data$club <- gsub(" FC", "", expenditure_data$club)
-    table_data$club <- gsub(" FC", "", table_data$club)
-    
-    # Create a mapping table for club names that might differ between the two sources
-    club_mapping <- data.frame(
-      transfermarkt_name = c("Manchester United", "Manchester City", "Arsenal FC"),
-      table_name = c("Man Utd", "Man City", "Arsenal"),
-      stringsAsFactors = FALSE
-    )
-    
-    # Apply mapping if needed
-    for(i in 1:nrow(club_mapping)) {
-      expenditure_data$club[expenditure_data$club == club_mapping$transfermarkt_name[i]] <- 
-        club_mapping$table_name[i]
-    }
-  }
-  
-  # Join the tables
-  season_data <- table_data %>%
-    left_join(expenditure_data, by = "club") %>%
-    mutate(
-      position = as.numeric(position),
-      points = as.numeric(points),
-      season = paste0(season_year, "/", substr(season_year + 1, 3, 4)),
-      expenditure_m = ifelse(is.na(expenditure_m), 0, expenditure_m)
-    )
-  
-  # Final check before returning
-  if(nrow(season_data) == 0) {
-    message("Warning: No data extracted for season ", season_year)
-    return(NULL)
-  }
-  
-  return(season_data)
-}
-```
+## Overview
+
+This analysis examines data from the English Premier League seasons 1992/92 through 2021/22 to investigate the relationship between transfer spending and on-field success. The data was extracted from [Transfermarkt](https://www.transfermarkt.co.uk).
+
+## Data Collection
 
 ```{r}
-# Extract data for all Premier League seasons (1992/93 to 2025/26)
-all_seasons <- data.frame()
-for(year in 1992:2025) {
-  cat("Extracting data for season", year, "/", substr(year + 1, 3, 4), "\n")
-  season_data <- extract_season_data(year)
-  all_seasons <- rbind(all_seasons, season_data)
-  
-  # Save intermediate results in case of interruption
-  write_csv(all_seasons, "premier_league_data_partial.csv")
-}
-```
+library(tidyverse)
+library(tidyjson)
+library(dplyr)
 
-```{r}
-# Clean and prepare final dataset
-final_data <- all_seasons %>%
-  # Make sure club names aren't NA
-  filter(!is.na(club)) %>%
-  # Ensure proper data types
+transfer_data_raw <- read_json(path = "data/92-21_income_expense_raw.json")
+epl_tables_raw <- read_json(path = "data/92-21_epl_tables_raw.json")
+
+parse_number_value <- function(v) {
+  is_k <- str_detect(v, "k$")
+  v <- parse_number(str_replace_all(str_trim(v), "[^0-9\\.]+", ""))
+  if (is_k) {
+    return(v * 0.001)
+  }
+  return(v)
+}
+
+normalise_club_name <- function(v) {
+  v <- str_trim(v)
+  if (v %in% c("Arsenal FC")) {
+    return("Arsenal")
+  } else if (v %in% c("AFC Bournemouth")) {
+    return("Bournemouth")
+  } else if(v %in% c("Barnsley FC")) {
+    return("Barnsley")
+  } else if(v %in% c("Birmingham")) {
+    return("Birmingham City")
+  } else if(v %in% c("Blackburn")) {
+    return("Blackburn Rovers")
+  } else if(v %in% c("Blackpool FC")) {
+    return("Blackpool")
+  } else if(v %in% c("Bolton")) {
+    return("Bolton Wanderers")
+  } else if(v %in% c("Bradford")) {
+    return("Bradford City")
+  } else if(v %in% c("Brentford FC")) {
+    return("Brentford")
+  } else if(v %in% c("Brighton")) {
+    return("Brighton & Hove Albion")
+  } else if(v %in% c("Burnley FC")) {
+    return("Burnley")
+  } else if(v %in% c("Cardiff")) {
+    return("Cardiff City")
+  } else if(v %in% c("Charlton")) {
+    return("Charlton Athletic")
+  } else if(v %in% c("Chelsea FC")) {
+    return("Chelsea")
+  } else if(v %in% c("Coventry")) {
+    return("Coventry City")
+  } else if(v %in% c("Derby")) {
+    return("Derby County")
+  } else if(v %in% c("Everton FC")) {
+    return("Everton")
+  } else if(v %in% c("Fulham FC")) {
+    return("Fulham")
+  } else if(v %in% c("Huddersfield")) {
+    return("Huddersfield Town")
+  } else if(v %in% c("Ipswich")) {
+    return("Ipswich Town")
+  } else if(v %in% c("Leeds")) {
+    return("Leeds United")
+  } else if(v %in% c("Leicester")) {
+    return("Leicester City")
+  } else if(v %in% c("Liverpool FC")) {
+    return("Liverpool")
+  } else if(v %in% c("Norwich FC", "Norwich")) {
+    return("Norwich City")
+  } else if(v %in% c("Man City")) {
+    return("Manchester City")
+  } else if(v %in% c("Man Utd")) {
+    return("Manchester United")
+  } else if(v %in% c("Middlesbrough FC")) {
+    return("Middlesbrough")
+  } else if(v %in% c("Newcastle")) {
+    return("Newcastle United")
+  } else if(v %in% c("Nottm Forest")) {
+    return("Nottingham Forest")
+  } else if(v %in% c("Portsmouth FC")) {
+    return("Portsmouth")
+  } else if(v %in% c("QPR")) {
+    return("Queens Park Rangers")
+  } else if(v %in% c("Reading FC")) {
+    return("Reading")
+  } else if(v %in% c("Sheff Utd")) {
+    return("Sheffield United")
+  } else if(v %in% c("Sheff Wed")) {
+    return("Sheffield Wednesday")
+  } else if(v %in% c("Southampton FC")) {
+    return("Southampton")
+  } else if(v %in% c("Sunderland AFC")) {
+    return("Sunderland")
+  } else if(v %in% c("Spurs")) {
+    return("Tottenham Hotspur")
+  } else if(v %in% c("Swansea")) {
+    return("Swansea City")
+  } else if(v %in% c("Watford FC")) {
+    return("Watford")
+  } else if(v %in% c("West Brom")) {
+    return("West Bromwich Albion")
+  } else if(v %in% c("West Ham")) {
+    return("West Ham United")
+  } else if(v %in% c("Wigan")) {
+    return("Wigan Athletic")
+  } else if(v %in% c("Wimbledon FC")) {
+    return("Wimbledon")
+  } else if(v %in% c("Wolves")) {
+    return("Wolverhampton Wanderers")
+  }
+  return(v)
+}
+
+# reshape the json array into a frame
+transfer_data <- transfer_data_raw %>% 
+  gather_array %>% 
+  spread_values(
+    season = jnumber("season"),
+    club = jstring("club"),
+    arrivals = jstring("arrival"),
+    departures = jstring("departures"),
+    income = jstring("income"),
+    expenditure = jstring("expenditure"),
+    balance = jstring("balance")
+  ) %>% 
+  # clean columns that are meant to be numbers by removing non numeric characters
+  # and converting them to number type
   mutate(
-    position = as.numeric(position),
-    expenditure_m = as.numeric(expenditure_m),
-    points = as.numeric(points)
-  ) %>%
-  # Sort by season and position
-  arrange(season, position) %>%
-  select(season, club, position, expenditure_m, points)
+    club = mapply(normalise_club_name, club),
+    income_m = mapply(parse_number_value, income),
+    expenditure_m = mapply(parse_number_value, expenditure),
+    balance_m = mapply(parse_number_value, balance),
+    arrivals = parse_number(arrivals),
+    departures = parse_number(departures),
+  ) %>% 
+  select(season, club, income_m, expenditure_m, balance_m, arrivals, departures)
 
-# Check for any remaining NAs
-na_counts <- colSums(is.na(final_data))
-print(paste("NA values by column:", paste(names(na_counts), na_counts, sep=": ", collapse=", ")))
+transfer_data$income_m[is.na(transfer_data$income_m)] <- 0
+transfer_data$expenditure_m[is.na(transfer_data$expenditure_m)] <- 0
 
-# If there are still NAs, you might want to handle them
-if(sum(na_counts) > 0) {
-  final_data <- final_data %>%
-    # Replace NA expenditures with 0
-    mutate(expenditure_m = ifelse(is.na(expenditure_m), 0, expenditure_m))
-}
+epl_tables <- epl_tables_raw %>% 
+  gather_array %>% 
+  spread_values(
+    season = jnumber("season"),
+    position = jstring("position"),
+    club = jstring("club"),
+    played = jstring("played"),
+    won = jstring("won"),
+    drawn = jstring("drawn"),
+    lost = jstring("lost"),
+    goals = jstring("goals"),
+    goal_diff = jstring("goals_diff"),
+    points = jstring("points")
+  ) %>% 
+  separate(goals, c("goals_for", "goals_against"), ":") %>% 
+  mutate(
+    position = parse_number(position),
+    club = mapply(normalise_club_name, club),
+    played = parse_number(played),
+    won = parse_number(won),
+    drawn = parse_number(drawn),
+    lost = parse_number(lost),
+    goals_for = parse_number(goals_for),
+    goals_against = parse_number(goals_against),
+    goal_diff = parse_number(goal_diff),
+    points = parse_number(points)
+  ) %>% 
+  select(season, position, club, played, won, drawn, lost, goals_for, goals_against, goal_diff, points)
 
-# Save data to CSV
-write_csv(final_data, "92-25-income_expenditure_table_positions.csv")
+# this piece of code will recreate the table for each season
+# sorted_tables <- epl_tables %>% 
+#   group_by(season) %>% 
+#   arrange(position, .by_group = TRUE)
+# 
+# sorted_tables %>% filter(season == 1992)
 
-# Display summary of extracted data
-cat("Data extraction complete. Saved", nrow(final_data), "records spanning", 
-    length(unique(final_data$season)), "seasons with", 
-    length(unique(final_data$club)), "unique clubs.\n")
+# list all winners
+#sorted_tables %>% filter(position == 1)
+#ds1_clubs <- epl_tables %>% distinct(club) %>% arrange(club)
+#ds2_clubs <- transfer_data %>% distinct(club) %>% arrange(club)
 
-# Preview of the extracted data
-head(final_data)
+out <- transfer_data %>% 
+  left_join(epl_tables, by = c("season" = "season", "club" = "club")) %>% 
+  select(
+    season, position, club, played, won, drawn, lost, goals_for, goals_against, goal_diff, points,
+    income_m, expenditure_m, balance_m, arrivals, departures)
+
+write_csv(out, file = "92-21-income_expenditure_table_positions.csv")
 ```
+
+
 
 ```{r echo=FALSE, message=FALSE}
 library(tidyverse)
@@ -277,12 +232,6 @@ library(ranger)
 
 data <- read.csv(file = "92-21-income_expenditure_table_positions.csv")
 ```
-
-## Overview
-
-This analysis examines data from the English Premier League seasons 1992/92 through 2021/22 to investigate the relationship between transfer spending and on-field success. The data was extracted from [Transfermarkt](https://www.transfermarkt.co.uk).
-
-
 
 ## Permier League Winners
 
