--- a/Project_Soccer.qmd
+++ b/Project_Soccer.qmd
@@ -14,19 +14,153 @@ installed.packages(c("tidyverse"))
 ## Data Extraction
 
 ```{r}
-# Data Extraction Process for Premier League Data
-# This code demonstrates how to scrape Transfermarkt data and save it to CSV
-
-# Load necessary libraries for web scraping and data manipulation
+# Loading necessary libraries
 library(rvest)
-library(dplyr)
-library(tidyr)
-library(readr)
+library(httr)
+library(tidyverse)
+library(jsonlite)
+
+# Function to scrape transfer data for a given season
+scrape_transfer_data <- function(season) {
+  
+  url <- sprintf("https://www.transfermarkt.co.uk/premier-league/transfers/wettbewerb/GB1/saison_id/%d", season)
+  cat("Scraping transfer data for season:", season, "\n")
+  
+  # Reading the page content
+  page <- tryCatch({
+    read_html(url)
+  }, error = function(e) {
+    cat("Error reading URL:", url, "\n")
+    return(NULL)
+  })
+  
+  if (is.null(page)) return(list())
+  
+  # Locating the table node (Transfermarkt usually labels it with class "items")
+  table_node <- html_node(page, "table.items")
+  if (is.na(table_node)) {
+    cat("Transfer table not found for season:", season, "\n")
+    return(list())
+  }
+  
+  # Parse the table into a data frame (fill = TRUE handles missing cells)
+  transfer_table <- html_table(table_node, fill = TRUE)
+  
+  # Format season as "1992/93", "1993/94", etc.
+  formatted_season <- sprintf("%d/%s", season, substr(as.character(season + 1), 3, 4))
+  
+  # For demonstration, assume that the table has at least 5 columns where:
+  # Column 2: Club, Column 3: Income, Column 4: Expense, Column 5: Balance.
+  if (ncol(transfer_table) < 5) {
+    cat("Not enough columns in transfer table for season:", season, "\n")
+    return(list())
+  }
+  
+  # Rename and select the columns of interest; adjust indices if necessary
+  transfer_data <- transfer_table %>%
+    rename(
+      Club = 2,
+      Income = 3,
+      Expense = 4,
+      Balance = 5
+    ) %>%
+    mutate(Season = formatted_season)
+  
+  # Convert each row to a list so that we can export a list of records
+  records <- split(transfer_data, seq(nrow(transfer_data)))
+  records <- lapply(records, as.list)
+  
+  return(records)
+}
+
+# Function to scrape the EPL league table data for a given season
+scrape_epl_table <- function(season) {
+  # Construct the URL for the league table
+  url <- sprintf("https://www.transfermarkt.co.uk/premier-league/tabelle/wettbewerb/GB1/saison_id/%d", season)
+  cat("Scraping league table data for season:", season, "\n")
+  
+  page <- tryCatch({
+    read_html(url)
+  }, error = function(e) {
+    cat("Error reading URL:", url, "\n")
+    return(NULL)
+  })
+  
+  if (is.null(page)) return(list())
+  
+  table_node <- html_node(page, "table.items")
+  if (is.na(table_node)) {
+    cat("League table not found for season:", season, "\n")
+    return(list())
+  }
+  
+  league_table <- html_table(table_node, fill = TRUE)
+  formatted_season <- sprintf("%d/%s", season, substr(as.character(season + 1), 3, 4))
+  
+  # Assume the league table has at least 9 columns where:
+  # Column 1: Position, Column 2: Team, Column 3: Played, Column 4: Wins,
+  # Column 5: Draws, Column 6: Losses and Column 9: Points.
+  if (ncol(league_table) < 9) {
+    cat("Not enough columns in league table for season:", season, "\n")
+    return(list())
+  }
+  
+  league_data <- league_table %>%
+    rename(
+      Position = 1,
+      Team = 2,
+      Played = 3,
+      Wins = 4,
+      Draws = 5,
+      Losses = 6,
+      Points = 9
+    ) %>%
+    mutate(Season = formatted_season)
+  
+  records <- split(league_data, seq(nrow(league_data)))
+  records <- lapply(records, as.list)
+  
+  return(records)
+}
+
+# Main code to loop over seasons and assemble the data
+transfer_data_all <- list()
+epl_table_all <- list()
 ```
+
+So firstly, I created two specialized functions to collect historical Premier League data from Transfermarkt. The first function, scrape_transfer_data(), extracts transfer information for each season by constructing the appropriate URL with the season parameter. I made sure to include error handling to gracefully manage any connection issues like the function attempts to read the webpage's HTML and looks specifically for tables with the "items" class that contain the transfer data. When it finds the right table, it parses the content and formats it properly, extracting club names, income, expenses, and balance figures.
+
+My second function, scrape_epl_table(), works similarly but targets the final league standings. It grabs position information, team names, match statistics (played, wins, draws, losses), and point totals. For both functions, I format the season nicely (like "1992/93") and transform each row of data into a list format that will work well for JSON export. I also included thorough validation checks to ensure the tables contain the expected number of columns before processing them. This approach lets me build a comprehensive dataset spanning nearly three decades of Premier League history in a structured format that's ready for analysis.
+
+
+```{r}
+# Loop through each season from 1992/93 (season = 1992) to 2021/22 (season = 2021)
+for (season in 1992:2021) {
+  cat("Processing season:", season, "\n")
+  
+  # Scrape transfer data for the season
+  transfers <- scrape_transfer_data(season)
+  if (length(transfers) > 0) {
+    transfer_data_all <- c(transfer_data_all, transfers)
+  }
+  Sys.sleep(2) 
+  
+  # Scrape league table data
+  league_table <- scrape_epl_table(season)
+  if (length(league_table) > 0) {
+    epl_table_all <- c(epl_table_all, league_table)
+  }
+  Sys.sleep(2)
+}
+```
+
+After creating the specialized scraping functions, I used this loop to process 30 seasons of Premier League data. For each season, I first called scrape_transfer_data() to extract the transfer information, then added the results to my growing collection if data was successfully retrieved.
+
+I then followed the same pattern for the league table data, calling scrape_epl_table() for each season and adding the results to my collection. The conditional statements ensure I only append data when the scraping was successful. So this methodical approach allowed me to build a comprehensive dataset spanning the entire Premier League era from its inception in 1992/93 through the 2021/22 season.
 
 ## Overview
 
-This analysis examines data from the English Premier League seasons 1992/92 through 2021/22 to investigate the relationship between transfer spending and on-field success. The data was extracted from [Transfermarkt](https://www.transfermarkt.co.uk).
+Ok so this analysis examines data from the English Premier League seasons 1992/92 through 2021/22 and my motive is to investigate the relationship between transfer spending and on-field success. The data was extracted from [Transfermarkt](https://www.transfermarkt.co.uk).
 
 ## Data Collection
 
@@ -207,13 +341,7 @@ sorted_tables <- epl_tables %>%
 
 sorted_tables %>% filter(season == 1992)
 
-out <- transfer_data %>% 
-  left_join(epl_tables, by = c("season" = "season", "club" = "club")) %>% 
-  select(
-    season, position, club, played, won, drawn, lost, goals_for, goals_against, goal_diff, points,
-    income_m, expenditure_m, balance_m, arrivals, departures)
-
-write_csv(out, file = "Income_expenditure_table_positions_1992-2021.csv")
+write_csv(sorted_tables, file = "Income_expenditure_table_posItions_1992-2021.csv")
 ```
 
 
@@ -228,7 +356,7 @@ library(prophet)
 library(caret)
 library(ranger)
 
-data <- read.csv(file = "Income_expenditure_table_positions_1992-2021.csv")
+data <- read.csv(file = "Income_expenditure_table_posItIons_1992-2021.csv")
 ```
 
 ## Permier League Winners
